--- a/_pages/angebote/index.html
+++ b/_pages/angebote/index.html
@@ -10,4 +10,8 @@ banner:
   title-sub:
   title-size: banner-title--xl
   bg-hero: "background-position: 65% bottom;"
+
+
+bg-color: "bg--light"
+bg-image: "bg-pattern-transp-2000px.png"
 ---
