--- a/_pages/gewinnspiel/index.html
+++ b/_pages/gewinnspiel/index.html
@@ -4,26 +4,37 @@ id: gewinnspiel
 nav: true
 nav-order: 5
 nav-title: gewinnspiel
+title: Gewinnspiel
 
 banner:
   title: Gewinnspiel
-  title-sub: Gewinnen Sie eine Fotoreise nach Südafrika – mit Ihrer eigenen Nikon Kamera.
+  title-sub: >
+      Gewinnen Sie eine aufregende Reise nach Südafrika inklusive NIKON Kamera – <br> und gehen Sie auf eigene Fotosafari.
 
-intro: Begeben Sie sich auf ein einmaliges Abenteuer nach Südafrika inklusive Flügen und&nbsp;Hotel und verwandeln Sie mit der Nikon D3500 atemberaubende Momente in bildgewaltige Fotoaufnahmen für die&nbsp;Ewigkeit.
+logo: "partner3.svg"
+
+intro: "Wild auf Südafrika – Starten Sie jetzt Ihre Safari bei einem unvergesslichen Aufenthalt in Südafrika inklusive Flügen und Hotel. Verwandeln Sie mit der Nikon Z50 atemberaubende Momente in bildgewaltige Fotoaufnahmen für die Ewigkeit. "
 prizes:
 
   - id: one
-    title: Erleben Sie eine Fotoreise nach Südafrika
-    content: "Riesige Nationalparks, endlose Weiten und menschenleere Strände, die ganze Flora und Fauna und kulturelle Vielfalt Südafrikas wartet auf Sie. Gewinnen Sie 7 Übernachtungen im Doppelzimmer für 2 Personen, inklusive Frühstück und fliegen Sie mit South African Airways von Frankfurt oder München nach Kapstadt, um die Safari Ihres Lebens zu erfahren."
+    title: "Begeben Sie sich auf eine Foto-Safari nach Südafrika"
+    content: "Von adrenalingeladenen Abenteuern über Entdeckungsreisen durch den Großstadtdschungel, von Küstenrundfahrten bis hin zu Gourmettouren durch die Sterneküchen – hier finden Sie genau die richtige Safari. Gewinnen Sie 7 Übernachtungen mit Frühstück für 2 Personen in Kapstadt, inklusive Hin- und Rückflügen mit South African Airways für die Safari Ihres Lebens."
     enter-cta: Jetzt teilnehmen
     external-link: "#"
 
+  - id: three
+    title: "Erste Wahl für die Reise ins Land am Kap: South African Airways"
+    content: "Mit South African Airways, Südafrikas nationaler Fluggesellschaft und Mitglied der Star Alliance, beginnt Ihr Südafrika-Erlebnis bereits an Bord. South African Airways fliegt täglich über Nacht von Frankfurt und München zum Drehkreuz Johannesburg und von dort weiter zu vielen weiteren Urlaubszielen im Südlichen Afrika. "
+    enter-cta: Mehr erfahren
+    external-link: "https://www.flysaa.com"
+
   - id: two
     title: Erinnerungen, die bleiben – dank Nikon
-    content: "Ihre sichere Begleitung im Busch: die Nikon Z50, die kompakteste Nikon-Systemkamera, ebenso gut für Fotos wie für actionreiche 4K-Filme geeignet. Zwei Objektive sind ebenfalls mit dabei. Mit dem Weitwinkelobjektiv NIKKOR Z DX 16–50 mm (1:3,5–6,3 VR) fangen Sie auch auf kurze Distanzen alle Details ein. Das Telezoomobjektiv NIKKOR Z DX 50–250 mm (1:4,5–6,3 VR) ist Ihre erste Wahl für schnelle Bewegungen und ferne Einzelheiten. So entgeht Ihnen keine Herde mehr."
+    content: "Ihre sichere Begleitung im Busch: die Nikon Z50, die kompakteste Nikon-Systemkamera, ebenso gut für Fotos wie für actionreiche 4K-Filme geeignet. Zwei Objektive sind ebenfalls mit dabei. Mit dem Weitwinkelobjektiv NIKKOR Z DX 16–50 mm (1:3,5–6,3 VR) fangen Sie auch auf kurze Distanzen alle Details ein. Das Telezoomobjektiv NIKKOR Z DX 50–250 mm (1:4,5–6,3 VR) ist Ihre erste Wahl für schnelle Bewegungen und ferne Einzelheiten. "
     enter-cta: Jetzt teilnehmen
     external-cta: Mehr erfahren
     external-link: "https://www.mynikon.de/inspiration/nikon-magazin/jetzt-erhaeltlich-nikon-z50"
+
 
 competition-form:
   id: comp
@@ -54,18 +65,7 @@ competition-form:
           label: 'Nein'
           value: 'no'
           invalid: true
-    - id: opt-in
-      type: radio
-      label: Would you like to receive emails from our Partner brand?
-      required: true
-      options:
-        - id: opt-in-true
-          label: 'Ja'
-          value: 'yes'
-        - id: opt-in-false
-          label: 'Nein'
-          value: 'no'
   submit: Absenden
   terms: >
-    By submitting your entry, you agree to the <a href="#" class="js-open-modal link--underlined" data-open-modal="competition-terms">terms and conditions</a> of this competition
+    Mit dem Absenden stimmen Sie unseren <a href="#" class="js-open-modal link--underlined" data-open-modal="competition-terms">AGBs</a> zu.
 ---
