--- a/_pages/highlights/index.html
+++ b/_pages/highlights/index.html
@@ -8,115 +8,122 @@ content-pages: true
 
 banner:
   title: Highlights
-  title-sub: Südafrika von der besten Seite
+  title-sub: Südafrika von seiner schönsten Seite
   title-size: banner-title--xl
   bg-hero: "background-position: 65% bottom;"
 
-summary: "Voller Vielfalt und Strände, reich an Abenteuern und entspannt, charmant und authentisch, mehr für Ihr Geld und für Ihren Instagram-Account – wir könnten noch lang Südafrikas Vorzüge aufzählen."
+summary: "Voller Vielfalt und Strände, reich an Abenteuern und entspannt, charmant und authentisch, mehr für Ihr Geld und für Ihren Instagram-Account – wir könnten noch lange Südafrikas Vorzüge aufzählen."
 cta: "Mehr erfahren"
 
 intro-title: ""
-intro: "Südafrika ist längst kein Geheimtipp mehr. Wanderer und Natur&shy;liebhaber finden hier ihr Glück ebenso wie Kultur- oder Safari&shy;begeisterte. Was zeichnet dieses schillernde Land zwischen zwei Ozeanen aus? Was sollte man sich nicht entgehen lassen?"
+intro: "Südafrika ist längst kein Geheimtipp mehr. Wanderer und Naturliebhaber finden hier ihr Glück ebenso wie Kultur- oder Safaribegeisterte. Was zeichnet dieses schillernde Land zwischen zwei Ozeanen aus? Was sollten Sie sich nicht entgehen lassen?"
+rotation: "transform: rotate(2deg);"
 
 
 highlights:
 
   title: Südafrikas Sensationen
-  description: "Natürlich - Kapstadt und Johannes&shy;burg stehen ganz oben auf jeder Liste. Aber wussten Sie, dass Sie hier den drittgrößten Canyon der Welt finden, ideale Orte zur Walbeobachtung und unzählige Cultural Villages, die Sie in eine andere Zeit transportieren?"
+  description: "Natürlich - Kapstadt und Johannesburg stehen ganz oben auf jeder Liste. Aber wussten Sie, dass Sie hier den drittgrößten Canyon der Welt finden, ideale Orte zur Walbeobachtung und unzählige Cultural Villages, die Sie in ihren Bann ziehen?"
+  cta: "http://www.southafrica.net"
   items:
 
-    - title: Pinguine am Boulder’s Beach
+    - title: Pinguine am Boulders Beach
       id: one
-      description: "Hier posen Pinguine statt Menschen für Strandselfies: am Boulder Beach, auf dem Weg zum Kap der Guten Hoffnung. Etwas 2.500 Jackass- und Brillenpinguine erheitern Besucher, die sich am Abschnitt Foxy Beach den Tieren nähern können. Die drei malerischen Strände von Boulders Beach laden dabei auch zum Schwimmen ein."
+      description: "Hier posen Pinguine statt Menschen für Strandselfies: am Boulders Beach, auf dem Weg zum Kap der Guten Hoffnung. Etwa 2.500 Jackass- und Brillenpinguine erheitern Besucher, die sich am Abschnitt Foxy Beach den Tieren nähern können. Die drei malerischen Strände von Boulders Beach laden dabei auch zum Schwimmen ein."
 
     - title: "Kreativzentrum Maboneng"
       id: two
-      description: "In Maboneng, dem Szeneviertel Johannesburgs flanieren Sie zwischen Galerien, Cafés und Boutiquen. Das Kreativzentrum Arts on Main und die Fox Street veranstalten jeden Sonntag den Market on Main. Nicht nur ungewohnte Aromen und internationale Gerichte regieren hier; auch das Auge wird mit Kunst in jeglicher Form verwöhnt."
+      description: "In Maboneng, dem Szeneviertel Johannesburgs flanieren Sie zwischen Galerien, Cafés und Boutiquen. Das Kreativzentrum Arts on Main und die Fox Street veranstalten jeden Sonntag den Market on Main. Nicht nur ungewohnte Aromen und internationale Gerichte regieren hier; auch das Auge wird mit Design in jeglicher Form verwöhnt."
 
     - title: "Für Instagram: Blyde River Canyon"
       id: three
-      description: "Alle, die ohne Instagram nicht reisen können, werden im Blyde River Canyon ein bezauberndes Motiv für ihre Instagram-Story finden. Die riesige grüne Schlucht hält mit God’s Window, The Pinnacle und The Potholes gleich mehrere panoramische Naturwunder bereit. Smartphones herbei!"
+      description: "Alle, die ohne Instagram nicht reisen können, werden am Blyde River Canyon ein bezauberndes Motiv für ihre Instagram-Story finden. Die riesige grüne Schlucht hält mit God’s Window, The Pinnacle und The Potholes gleich mehrere Panoramen und Naturwunder bereit. Smartphones herbei!"
 
     - title: "Zum Gipfel der Drakensberge"
       id: four
-      description: "An der Grenze zu Lesotho liegen die Drakensberge, mit dem Royal Natal National Park, der für Wanderer ein Muss ist. Vom Sentinel Car Park starten Sie eine Wanderung zum Gipfel, 12 km an Weg, die in fünf Stunden zum Amphitheater und zu den majestätischen Tugela Wasserfällen führt."
+      description: "An der Grenze zu Lesotho liegen die Drakensberge, mit dem Royal Natal National Park, der für Wanderer ein Muss ist. Vom Sentinel Car Park unweit der Stadt Clarens in der Provinz Free State starten Sie eine Wanderung zum Dach der Drakensberge, 12 km an Weg, die in fünf Stunden zum Amphitheater - einer acht Kilometer langen, fast senkrechten Felswand - und zu den majestätischen Tugela Wasserfällen führt."
 
     - title: "Majestätische Augrabies Falls"
       id: five
-      description: "Apropos Wasserfälle: unweit der namibischen Grenze rauscht es in den Augrabies Falls im Chor in die Tiefe. Der Oranje River stürzt hier 56 Meter tief. Wenn dann nachmittags die Sonne die Granitfelsen anleuchtet, kann das niemanden kalt lassen."
+      description: "Apropos Wasserfälle: im Northern Cape rauscht es in den Augrabies Falls tief hinab. Der Orange River stürzt hier 56 Meter in die Tiefe. Wenn beim Sonnenuntergang die Granitfelsen in ein ganz besonderes Licht getaucht werden, kann das niemanden kalt lassen."
 
-    - title: "Blütenmeer in Namaqualand"
+    - title: "Blütenmeer im Namaqualand"
       id: six
-      description: "Die Blütenpracht in Namaqualand ist nicht von dieser Welt. Die trockenen Regionen der Cape West Coast wandeln sich im Frühling in ein gelbes Blütenmeer – schier unvergesslich und einmalig als Fotomotiv. Dazu gesellt sich ein großer Artenreichtum von Vögeln, darutner viele Zugvögel aus dem Norden."
+      description: "Die Blütenpracht im Namaqualand ist nicht von dieser Welt. Die trockenen Regionen der West Coast verwandeln sich im südafrikanischen Frühling zwischen August und Anfang Oktober in ein farbenprächtiges Blütenmeer – schier unvergesslich und einmalig als Fotomotiv. Dazu gesellt sich ein großer Artenreichtum von Vögeln, darunter viele Zugvögel aus dem Norden."
 
     - title: Walbeobachtung
       id: seven
-      description: "Gleich mehrere Orte in Südafrika eignen sich sehr gut für Wal&shy;beobachtung. In Hermanus am Western Cape sind die Meeresriesen von Juni bis November zu sichten, an der Elephant Coast am Indischen Ozean sind die größten Säugetiere der Welt das ganze Jahr über zu erhaschen."
+      description: "Gleich mehrere Orte in Südafrika eignen sich sehr gut für Walbeobachtungen. In Hermanus im Western Cape sind die Meeresriesen von Juni bis November zu sichten, an der Elephant Coast am Indischen Ozean sind die größten Säugetiere der Welt das ganze Jahr über zu beobachten."
 
     - title: "Per Ballon im Pilanesberg Nationalpark"
       id: eight
-      description: "Wer sich nach ganz oben traut, für den ist eine Ballonfahrt im Pilanesberg Nationalpark das Richtige. Die Luft-Safari führt über erloschene Vulkankrater hinweg und eröffnet einzigartige Vogel&shy;pers&shy;pektiven auf Antilopen und Elefantenherden."
+      description: "Wer sich nach ganz oben traut, für den ist eine Ballonfahrt im Pilanesberg Nationalpark das Richtige. Die Luft-Safari führt über einen erloschenen Vulkankrater hinweg und eröffnet einzigartige Vogelperspektiven auf Antilopen- und Elefantenherden."
 
     - title: "Traditionelle Ndebele-Dörfer"
       id: nine
-      description: "Wie wäre es etwas traditioneller? In der Stadt Siyabuswa findet sich das Museumsdorf Kghodwana. Seine Einwohner, die Ndebele lassen sich 1000 Jahre zurückverfolgen und sind für ihre farbenfrohe Kleidung und die geometrischen Muster ihrer Häuser bekannt."
+      description: "Wie wäre es etwas traditioneller? In der Stadt Siyabuswa findet sich das Museumsdorf Kghodwana. Die Spuren seiner Einwohner, der Ndebele, lassen sich 1000 Jahre zurückverfolgen. Die Ndebele sind für ihre farbenfrohe Kleidung und die geometrische Bemalung ihrer Häuser bekannt."
+
+
+    - title: "Weintour durch die Winelands"
+      id: ten
+      description: "In den Winelands können Sie zwischen über zehn verschiedenen Weinrouten wählen. Von Weingut zu Weingut kommen Sie entweder mit dem Fahrrad, einer Wine Tram in Franschhoek oder ganz vornehm mit der Kutsche. Viele Weingüter bieten neben Weinproben ein abwechslungsreiches Programm für die ganze Familie, Picknickkörbe und hervorragende Küche."
 
 
 reasons:
 
   title: 11 Gründe für eine Reise nach&nbsp;Südafrika
-  description: Warum Südafrika? Um den südlichsten Punkt des Kontinents zu besuchen. Um ein einzigartiges Lebensgefühl kennenzulernen. Um an dieser Vielfalt teilzuhaben.
+  description: "Warum Südafrika? Um den südlichsten Punkt des Kontinents zu besuchen. Um ein einzigartiges Lebensgefühl kennenzulernen. Um die faszinierende Vielfalt zu erleben."
   items:
 
       - id: one
         count: "01"
         title: Mehr für Ihr Geld
-        answer: "Südafrika ist alles andere als teuer. Der günstige Wechselkurs (1 € = ca. 15-16 ZAR) und die niedrigen Nebenkosten machen es zu einem überaus attraktiven Reiseziel. Wenn das keine perfekten Bedingungen für das gewisse Extra an Luxus sind!"
+        answer: "Südafrika ist alles andere als teuer. Der günstige Wechselkurs und die niedrigen Nebenkosten machen es zu einem überaus attraktiven Reiseziel. Wenn das keine perfekten Bedingungen für das gewisse Extra an Luxus sind!"
 
       - id: two
         count: "02"
         title: "Über Nacht erreichbar"
-        answer: "Im Vergleich zu Südostasien oder Südamerika ist das Land am Kap gar nicht so weit entfernt – 'Sho’t left', würde der Südafrikaner bekräftigen. Per Nachtflug ist das Land nach ca. 11 Stunden Flug zu erreichen und plagt Reisende nicht mit Zeitverschiebungen."
+        answer: "Im Vergleich zu anderen fernen Destinationen ist das Land am Kap nicht so weit entfernt – 'Sho’t left' ('Gleich um die Ecke'), würde der Südafrikaner bekräftigen. Per Nachtflug ist das Land nach ca. 10 Stunden Flug zu erreichen und plagt Sie nicht mit Zeitverschiebungen."
 
       - id: three
         count: "03"
         title: "Reich an Vielfalt"
-        answer: "Südafrika hat nicht nur einen Reichtum an Nationalsprachen. Hier erleben Sie eine schillernde Natur- und Tierwelt, traditionelle Kulturen Seite an Seite mit modernem Stadtleben, eine Fülle an Nationalparks und eine einmalige gastfreundliche Stimmung."
+        answer: "In Südafrika gibt es nicht nur 11 amtliche Nationalsprachen. Hier erleben Sie eine schillernde Natur- und Tierwelt, traditionelle Kulturen Seite an Seite mit modernem Stadtleben, eine Fülle an Nationalparks und eine einmalige gastfreundliche Stimmung."
 
       - id: four
         count: "04"
         title: "Naturschönheiten"
-        answer: "Es sind zu viele, um sie alle aufzuzählen: die rot leuchtende Kalahari-Savanne, Kapstadt mit dem Tafelberg, die idyllische Garden Route mit den Lagunen in Knysna, die Felsküsten am Atlantik, der Addo Elephant Nationalpark, die schimmernden Strände...die Liste lässt sich ewig fortsetzen."
+        answer: "Es sind zu viele, um sie alle aufzuzählen: die rot leuchtende Kalahari-Wüste, Kapstadt mit dem Naturwunder Tafelberg, die idyllische Garden Route mit den Lagunen in Knysna, die zerklüfteten Felsküsten am Atlantik, der Addo Elephant National Park, die schimmernden Strände des Indischen Ozeans, die beeindruckenden Drakensberge,...die Liste lässt sich ewig fortsetzen."
 
       - id: five
         count: "05"
         title: "Wilde Tiere"
-        answer: "Es ist ein Leichtes, den Big Seven zu begegnen: Löwe, Leopard, Elefant, Nashorn, Büffel, Wal und weißer Hai. Neben diesen Elite-Vertretern des Tierreiches machen auch Antilopen, Pinguine, Erdmännchen und noch viele weitere die Aufwartung. So werden Sie im Nu zum Safari-Fan."
+        answer: "Nicht nur die Big Seven – Löwe, Leopard, Elefant, Nashorn, Büffel, Wal, Weißer Hai – sind in Südafrika in freier Wildbahn zu sehen. Neben diesen Elite-Vertretern des Tierreichs machen auch Wildhunde, Pinguine, Erdmännchen und noch viele weitere die Aufwartung. So werden Sie im Nu zum Safari-Fan."
 
       - id: six
         count: "06"
         title: "Südafrikanischer Lifestyle"
-        answer: "Der typische Südafrikaner ist sehr entspannt. Er liebt die Outdoor-Welt, ist kulturbegeistert und lebensfroh. Dieser Vibe steckt an, nicht nur in den vibrierenden Großstädten wie Kapstadt und Johannesburg, aber auch in kleineren Ortschaften."
+        answer: "Der typische Südafrikaner ist sehr entspannt. Er liebt die Outdoor-Welt, ist kulturbegeistert und lebensfroh. Dieser Vibe steckt an, nicht nur in den vibrierenden Großstädten Kapstadt, Johannesburg, Durban und Pretoria, sondern auch im ländlichen Raum."
 
       - id: seven
         count: "07"
         title: "Abenteuer erleben"
-        answer: "Wo die Natur so viel zu bieten hat, da ist das nächste Abenteuer nicht weit. Surfen und Mountainbiken, steile Berge und Vulkane, Walbeobachtungsfahrten und Zip-Lining: es gibt wenige Orte, die mit Südafrika in Sachen Outdoor-Aktivitäten mithalten können."
+        answer: "Wo die Natur so viel zu bieten hat, da ist das nächste Abenteuer nicht weit. Surfen und Mountainbiken, steile Berge, Walking Safaris, Walbeobachtungsfahrten und Zip-Lining: es gibt wenige Orte, die mit Südafrika in Sachen Outdoor-Aktivitäten mithalten können."
 
       - id: eight
         count: "08"
         title: "Schönwetter-Garantie "
-        answer: "Diese ganzen Aktivitäten an der frischen Luft würden natürlich nur halb so viel Spaß machen, wenn das Wetter von Regen und Sturm bestimmt wäre. Dem ist nicht so: wenige Großstädte der Welt bieten mehr Sonne als Kapstadt mit seinen 3.100 Stunden."
+        answer: "Diese ganzen Aktivitäten an der frischen Luft würden natürlich nur halb so viel Spaß machen, wenn das Wetter von Regen und Sturm bestimmt wäre. Dem ist nicht so: wenige Großstädte der Welt bieten mehr Sonne als Kapstadt mit seinen 3.000 Sonnenstunden."
 
       - id: nine
         count: "09"
-        title: "Regenbogen-Nation"
-        answer: "Ubuntu – 'Ich bin, weil wir es sind' – ist ein Wort, das die südafrikanische Mentalität treffend wiedergibt. Ethnien und Volksgruppen verschiedenster Art leben hier zusammen, und das gesellige Miteinander ist eine zentrale Vorstellung in Südafrika."
+        title: "Regenbogennation"
+        answer: "Ubuntu – 'Ich bin, weil wir es sind' – ist ein Wort, das die südafrikanische Mentalität treffend wiedergibt. Unterschiedliche Nationalitäten und Kulturen leben hier zusammen, und das gesellige Miteinander ist eine zentrale Philosophie in Südafrika."
 
       - id: ten
         count: "10"
         title: "Kleine Juwelen"
-        answer: "Überall im Land sind sie verteilt, diese kleinen Funde. Charmante Gasthäuser und Cultural Villages, beachtenswerte Restaurants und unerwartete Ausblicke. Kommen Sie der kulturellen Vielfalt der Regebogen-Nation näher und sammeln Sie Eindrücke am laufenden Band."
+        answer: "Überall im Land sind sie verteilt, diese kleinen Funde. Charmante Gasthäuser, Cultural Villages, kleine lokale Tourenanbieter und beachtenswerte Restaurants. Kommen Sie der kulturellen Vielfalt der Regebogennation näher und sammeln Sie Eindrücke am laufenden Band."
 
       - id: eleven
         count: "11"
@@ -129,10 +136,10 @@ reasons:
 ---
 
 
-<div class="vpad--xxl bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
+<div class="vpad--xxl bg--beige bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-50pc-2000px.png');">
   <div class="container">
     <div class="width width--lg">
-       <div class="text text--xxxl text--justify">
+       <div class="text text--xl text--justify">
          <h2 class="title title--lg text--bolder">{{page.intro-title}}</h2>
          <div class="space--sm text--normal text--justify"> <p>{{page.intro}}</p></div>
        </div>
@@ -163,7 +170,7 @@ reasons:
 
     <div class=" bg--white bv-btn-accordion text--white" style=" background-image: url('{{site.img}}/content/{{page.id}}/reasons/{{reason.id}}.jpg'); background-position: center; background-repeat: no-repeat;">
       <div class="bv-mob-center ">
-        <div class="text--white bv-collapsible accordion bg--turquoise title title--xs text--bold text--upper">
+        <div class="text--white bv-collapsible accordion bg--bv-accordion title title--xs text--bold text--upper">
           <div class="title--xl text--serif bv-accordion-count" >{{reason.count}}.</div>
           <div class="vpad--xs">{{reason.title}}</div>
         </div>
@@ -197,14 +204,14 @@ reasons:
   </div>
 
 
-  <div class="container bg--white" style="border-radius: 6px;" >
+  <div class="container bg--white" >
   <div class="row  row--xl-6-6 row--gutters-sm"  >
   {% for highlight in page.highlights.items %}
 
     <div class="col text text--md text--justify ">
     <div class="space--xxs"></div>
     <div class="space--xxs"></div>
-      <div class="bg-img bg--white bg-img--16-9"  style="border-radius: 3px; background-image: url('{{site.img}}/content/{{page.id}}/highlights/{{highlight.id}}.jpg');"> </div>
+      <div class="bg-img bg--white bg-img--16-9"  style="background-image: url('{{site.img}}/content/{{page.id}}/highlights/{{highlight.id}}.jpg');"> </div>
       <div class="bg--white">
       <div class="space--sm"></div>
         <h5 class="title title--xs text--left text--bolder ">{{highlight.title}}</h5>
@@ -217,9 +224,9 @@ reasons:
  {% endfor %}
 
   </div>
-  <div class="space--xl"></div>
+  <div class="space--xl text--center">
+    <a href="{{page.highlights.cta}}" class="btn btn--blue" target="_blank">Weitere Infos zu Südafrika</a>
+    <div class="space--xl"></div>
 </div>
-<div class="space--xxxxl"></div>
 </div>
-
-{% include page/empfehlung.html %}
+ <div class="space--xxxl"></div>
