--- a/_pages/reiserouten/index.html
+++ b/_pages/reiserouten/index.html
@@ -13,11 +13,12 @@ banner:
   bg-hero: "background-position: 30% center;"
 
 
-summary: "Viele Wege führen nach Rom, noch mehr führen zum südafrikanischen Reiseglück. Von der klassischen Garden Route über einen tageslangen Canyon-Roadtrip bis zum Geheimtipp Elephant Coast: so entdecken Sie Südafrika auf vier Rädern."
+summary: "Viele Wege führen zum südafrikanischen Reiseglück. Von der klassischen Garden Route über einen Canyon-Roadtrip bis zum Geheimtipp Elephant Coast: so entdecken Sie Südafrika auf vier Rädern."
 cta: "Mehr erfahren"
 
 intro-title: ""
 intro: "Die beste Art, viele Highlights in einer Reise abzudecken ist immer noch der Roadtrip. Hierfür ist Südafrika prädestiniert und neben der klassischen Gardenroute gibt es mindestens noch zwei weitere Routen, die Ihnen den Atem verschlagen werden.  "
+rotation: "transform: rotate(2deg);"
 
 ---
 
@@ -41,9 +42,8 @@ intro: "Die beste Art, viele Highlights in einer Reise abzudecken ist immer noch
   {% include page/reiserouten/reiserouten3-ie.html %}
 </div>
 
-<div class="space--lg bg--light"></div>
+{% include page/promo-signup.html %}
 
-{% include page/empfehlung.html %}
 
 <script>
   var elem = document.getElementById("bv-road-ie");
