--- a/_pages/wildlife/index.html
+++ b/_pages/wildlife/index.html
@@ -12,36 +12,36 @@ banner:
   title-size: banner-title--xl
   bg-hero: "background-position: 65% bottom;"
 
-summary: "Auge in Auge mit Dickhäutern, auf der Fährte von Geparden: erleben Sie tierische Abenteuer in Nationalparks und privaten Game Reserves, tauchen Sie zu Korallen und lassen Sie sich von eindrucksvollen Panoramen den Atem verschlagen."
+summary: "Auge in Auge mit Dickhäutern, auf der Fährte von Geparden und Löwen: erleben Sie tierische Abenteuer in Nationalparks und privaten Game Reserves, tauchen Sie ab zu bunten Korallen und lassen Sie sich von eindrucksvollen Panoramen den Atem verschlagen."
 cta: "Mehr erfahren"
 
 intro-title: "Drei der fazinierendsten Nationalparks"
 intro: "Der Krüger-Nationalpark ist ein Begriff und eine Institution. Unter den 19 Nationalparks in Südafrika gibt es aber genug andere, die sich ihm zur Seite stellen können. Mögen Sie Elefanten, Schildkröten oder Flamingos? Weiterlesen,&nbsp;bitte!"
-
+rotation: "transform: rotate(-2deg);"
 
 parks:
 
-  title: Drei der fazinierendsten Nationalparks
-  description: Der Krüger-Nationalpark ist ein Begriff und eine Institution. Unter den 19 Nationalparks in Südafrika gibt es aber genug andere, die sich ihm zur Seite stellen können. Mögen Sie Elefanten, Schildkröten oder Flamingos? Weiterlesen,&nbsp;bitte.
+  title: Drei der faszinierendsten Nationalparks
+  description: Der Krüger-Nationalpark ist ein Begriff und eine Institution. Unter den 19 Nationalparks in Südafrika gibt es aber viele weitere Parks, die nicht weniger reizvoll sind. Mögen Sie Elefanten, Schildkröten oder Flamingos? Weiterlesen,&nbsp;bitte.
   items:
 
     - title: 1. Krüger Nationalpark
       id: one
-      description: "Das größte und bekannteste Wildschutzgebiet Südafrikas liegt im Nordosten, in der Provinz Mpumalanga. Der Krüger-Nationalpark ist ein Gigant in jeglicher Hinsicht: 1,9 Millionen Hektar groß und durch ein 2.500 Kilometer langes Netz von Straßen erschlossen. Bis zu 1,4 Millionen Besucher im Jahr bewundern hier große und kleinere Raubkatzen, Giraffen und Nilpferde, Büffel und Krokodile – kurzum alle Tiere, die man in Afrika erwartet. Mindestens 3 Nächte sollten Sie für einen Besuch einplanen. Obwohl jede Jahreszeit lohnend ist, ist im Sommer die Chance, Tierbabys zu sehen, größer."
+      description: "Das größte und bekannteste Wildschutzgebiet Südafrikas liegt im Nordosten, in den Provinzen Mpumalanga und Limpopo. Der Krüger-Nationalpark ist in jeglicher Hinsicht ein Gigant: 1,9 Millionen Hektar groß und durch ein 2.500 Kilometer langes Netz von Straßen erschlossen. Hier haben Sie die Chance große und kleinere Raubkatzen, Elefanten, Giraffen und Nilpferde, Büffel und Krokodile zu beobachten – kurzum alle Tiere, die man im südlichen Afrika erwartet. Mindestens 3 Nächte sollten Sie für einen Besuch einplanen. Obwohl jede Jahreszeit lohnend ist, ist im südafrikanischen Sommer (Dezember bis Februar) die Chance, Tierbabys zu sehen, größer."
 
-    - title: "2. Addo-Elefanten-Nationalpark"
+    - title: "2. Addo Elephant National Park"
       id: two
-      description: "Knappe 70 Kilometer nördlich von Port Elizabeth im Ostkap liegt der Addo-Nationalpark mit Fokus auf Elefanten. Nachdem 11 Elefanten im Jahre 1931 den Grundstock des Parks bildeten, streifen heute bereits 600 Dickhäuter durch den Park, vorbei an Kap-Büffeln und zahlreichen Antilopenarten. Wenn Sie von den friedvollen Landriesen doch genug haben sollten, schafft die Küste mit Walen, Haien und Robben Abhilfe. Wanderer werden vom Zuurberg und von der Dünenlandschaft Alexandrias entzückt sein: 32 Kilometer sind auf dem Alexandria Hiking Trail zurückzulegen, jeder davon beeindruckender als der nächste."
+      description: "Knappe 70 Kilometer nördlich von Port Elizabeth  an der Garden Route im Eastern Cape liegt der Addo Elephant National Park, der sich dem Schutz der Dickhäuter widmet. Nachdem 11 Elefanten im Jahre 1931 den Grundstock des Parks bildeten, streifen heute bereits wieder mehr als 600 Dickhäuter durch das Schutzgebiet, zusammen mit Büffeln und zahlreichen Antilopenarten. Wenn Sie von den friedvollen Landriesen doch genug haben sollten, schafft die Küste mit Walen, Haien und Robben Abhilfe. Wanderer werden vom Zuurberg und von der Dünenlandschaft Alexandrias entzückt sein: 32 Kilometer sind auf dem Alexandria Hiking Trail zurückzulegen, jeder davon beeindruckender als der vorherige."
 
     - title: "3. iSimangaliso Wetland Park"
       id: three
-      description: "Safari kann jeder - ein ganz unvergleichliches Erlebnis wartet dagegen an der subtro&shy;pischen Küste von KwaZulu Natal im Osten Südafrikas. Das UNESCO-Weltnaturerbe des iSimangaliso Wetland Parks besteht aus acht zusammenhängenden Ökosystemen, darunter Küstenwald, die Sodwana Bay, bestes Tauchrevier des Landes und Heimat des Quastenflossers, Dünenwälder und mehr. Nilpferde leben neben Krokodilen, der Lake St Lucia ist ein Magnet für Pelikane und Flamingos, Dutzende an Frosch- und hunderte Vogelarten vervoll&shy;ständigen die Liste."
+      description: "Safari kann jeder - ein ganz unvergleichliches Erlebnis wartet dagegen an der subtropischen Küste von KwaZulu-Natal im Osten Südafrikas. Das UNESCO-Weltnaturerbe des iSimangaliso Wetland Parks besteht aus acht zusammenhängenden Ökosystemen, darunter Küstenwald, die Sodwana Bay, bestes Tauchrevier des Landes und Heimat des Quastenflossers, Dünenwälder und mehr. Nilpferde leben neben Krokodilen, der Lake St. Lucia ist ein Magnet für Pelikane und Flamingos, Dutzende an Frosch- und hunderte Vogelarten vervollständigen die Liste. "
 
 
 safaris:
 
   title: Unterwegs auf Safari
-  description: Südafrika zu besuchen, ohne auf Safari zu gehen, ist wie Paris zu besuchen, ohne den Louvre zu sehen. Es gibt mehrere Arten und Weisen, sich den wilden Tieren zu nähern, in jedem Fall ist ein Adrenalinrausch vorprogrammiert.
+  description: "Für die meisten Reisenden ist eine Safari einer der großen Höhepunkte ihrer Südafrikareise. Es gibt mehrere Arten und Weisen, sich den wilden Tieren zu nähern, in jedem Fall ist ein Adrenalinrausch vorprogrammiert."
 
 
 
@@ -109,13 +109,13 @@ safaris:
    </div>
  </div>
 
- <div class="bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
+ <div class="bg--beige bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-50pc-2000px.png');">
   <div class="container vpad--xl">
     <div class="row row--xl-4-4-4 row--lg-6-6  " >
 
       {% for safari in site.data.sections %}
         <div class="col">
-          <div id="tracking-poi-{{poi.id}}" class="bg--white bv-thumb-zoom js-open-modal boxpad--sm " data-open-modal="{{safari.id}}" style="cursor: pointer; {{safari.layer}} {{safari.rotation}} ">
+          <div id="tracking-poi-{{safari.id}}" class="bg--white bv-thumb-zoom js-open-modal boxpad--sm " data-open-modal="{{safari.id}}" style="cursor: pointer; {{safari.rotation}} ">
             <div class="bg-img bg-img--4-3 bg-img--md-1-1 bg-img--lg-1-1 bv-thumb-vignette" style="background-image: url('{{site.img}}/content/wildlife/safari/{{safari.id}}.jpg');"></div>
             <div class="space--sm"></div>
             <div class="vpad--xxs bg--white text text--serif text--xxl text--center">{{safari.title}}</div>
@@ -128,4 +128,5 @@ safaris:
   </div>
 </div>
 
-{% include page/empfehlung.html %}
+
+{% include page/promo-signup.html %}
